--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hardhat-contract-sizer": "^2.8.0",
     "hardhat-deploy": "^0.11.26",
     "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "^2.8.7",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
