--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,6 +10,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Environment
       uses: actions/setup-node@v3
+    - name: Install dependencies
+      run: yarn install
     - name: Lint
       uses: wearerequired/lint-action@v2
       with:
